# vectras

./: .env.example  .eslintrc.json  .gitignore  README.md  config.yaml  config.yaml.example  package.json  pyproject.toml  setup.sh  start.sh  stop.sh  test.sh
.github/workflows/: ci.yml
docs/: PRESENTATION.md  PROCESS_MANAGEMENT.md  TROUBLESHOOTING.md  VECTRAS_SETTINGS.md
frontend/: index.html
frontend/static/: app.js  styles.css
src/vectras/: __init__.py
src/vectras/agents/: agent.py  base_agent.py  code_fixer.py  coding.py  config.py  github.py  linting.py  log_monitor.py  logging_monitor.py  supervisor.py  testing.py
src/vectras/apis/: api.py
src/vectras/frontend/: app.py
src/vectras/mcp/: server.py
src/vectras/utils/: __init__.py
test_tools/: divide.py  divide_fixed.py  divide_fixed_new.py  multiply.py  test_divide.py  tool_20250809_183554.py  tool_20250809_183707.py  tool_20250809_183731.py
tests/: conftest.py
tests/integration/: run_e2e_test.py  test_comprehensive_e2e.py  test_e2e_agent_flow.py  test_real_e2e_workflow.py  test_simple_e2e.py  test_system.py
tests/unit/: test_agent.py  test_api.py  test_code_fixer.py  test_coding_agent.py  test_e2e_agents.py  test_github.py  test_github_agent.py  test_linting.py  test_linting_agent.py  test_log_monitor.py  test_logging_monitor_agent.py  test_mcp.py  test_supervisor_agent.py  test_testing.py  test_testing_agent.py  test_vectras_supervisor.py
tools/: lint.sh  tail-logs.sh
